# ux-mirror

./: .coverage  .env.example  .gitignore  AGENT_HANDOVER.md  ANTHROPIC_API_SETUP.md  BACKGROUND_AGENT_ANALYSIS_REPORT.md  CMakeLists.txt  CODE_CLEANUP_SUMMARY.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_FINAL_SUMMARY.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_REFACTOR_REPORT.md  CONTRIBUTING.md  CORE_FUNCTIONALITY.md  DARK_THEME_GUIDE.md  DELIVERABLES_SUMMARY.md  DISCORD_SETUP_FINAL.md  Dockerfile  FINAL_CODE_REVIEW.md  GAME_INTEGRATION_QUICKSTART.md  GAME_UX_TESTING_GUIDE.md  GITHUB_INTEGRATION_PROGRESS.md  GITHUB_INTEGRATION_SETUP.md  GIT_COMMIT_PLAN.md  GUI_README.md  IMAGE_RECOGNITION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INSTALL_AND_LAUNCH.bat  LAUNCHER_README.md  LICENSE  MULTI_AGENT_SYSTEM_SUMMARY.md  Makefile  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE1_REVIEW.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  (+125 more)
.cursor/: config.json
.cursor/rules/: cpp-vulkan.json  global.json  ux-mirror.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: asm_guard.yml  ci.yml  discord-notify.yml  ux-analysis.yml
agents/: autonomous_implementation.py  code_analysis_agents.py  core_orchestrator.py  example_agent_chat.py  github_integration.py  metrics_intelligence.py  screenshot_analyzer.py  simple_orchestrator.py  task_organizer.py  temporal_screenshot_analyzer.py  test_code_analysis.py  visual_analysis.py  visual_analysis_agent.py  visual_analysis_agent_refactored.py
agents/prompts/: system_architect_agent.md  ux_intelligence_agent.md
api-key-manager/: docker-compose.yml  nginx.conf  setup.sh
api-key-manager/backend/: .env.example  Dockerfile  package.json  server.js
api-key-manager/frontend/: Dockerfile  nginx.conf  package.json
archive/api/: ux_mirror_api.py
archive/autonomous/: setup_autonomous_vm.bat  setup_autonomous_vm.sh
archive/core/: gpu_manager.py
archive/docs/: AUTONOMOUS_TESTING_PLAN.md  CLEANUP_COMPLETE.md  CLEANUP_FINAL_REPORT.md  CLEANUP_ROADMAP.md  CLEANUP_STATUS.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_STATUS.md  PLAYWRIGHT_INTEGRATION_GUIDE.md  PLAYWRIGHT_INTEGRATION_SUMMARY.md  README_old.md  UNIVERSAL_MONITORING_GUIDE.md  UX_MIRROR_CONSOLIDATED.md
archive/examples/: playwright_active_monitoring.py  universal_monitoring.py
archive/launchers/: launch_ux_mirror.bat
archive/monitoring/: monitoring_window.py  universal_active_monitor.py
cli/: __init__.py  main.py
config/: orchestrator_config.json  port_allocations.json  vision_config.json  vm_orchestrator.json
config/schemas/: orchestrator_schema.json
core/: adaptive_feedback.py  configuration_manager.py  error_handler.py  exceptions.py  port_manager.py  screenshot_analyzer.py  secure_config.py
docs/: ACTIVE_MONITORING_GUIDE.md  API_KEY_SETUP.md  BACKGROUND_AGENT_ANALYSIS_REPORT.md  CODE_REUSE_GUIDE.md  DEBUGGING_SETUP_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  ML_IMPLEMENTATION_TASKS.md  OCR_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_INTEGRATION_GUIDE.md  PLAYWRIGHT_INTEGRATION_SUMMARY.md  PLAYWRIGHT_VERIFICATION.md  PROMPT_ANALYSIS_SUMMARY.md  REPORT_BASED_ARCHITECTURE.md  UNIFIED_AGENT_ARCHITECTURE.md  UNIVERSAL_MONITORING_GUIDE.md  VULKAN_DEBUGGING_GUIDE.md
examples/: comprehensive_ux_prompt_example.py  feedback_integration_demo.py  game_testing_demo.py  playwright_ux_analysis.py  prototype_poc.py  task_organizer_example.py  test_screenshot_demo.py  universal_monitoring.py
examples/automation_sequences/: browse_web.json  open_notepad.json
generated_fixes/: implementation_guide_20250602_124106.html  ux_fixes_20250602_123945.css  ux_fixes_20250602_123945.js  ux_fixes_20250602_124106.css  ux_fixes_20250602_124106.js
include/: ComputeShaderDebugger.h  GameOfLife3D.h  VmaConfig.h  VulkanContext.h  VulkanMemoryManager.h
legacy/: test_orchestrator.py
legacy/agents/: orchestrator.py  (+2 more)
scripts/: compile_shaders.ps1  cuda_dump.sh  debug_vulkan.ps1  dump_disassembly.sh  profile_hot.sh
shaders/: game_of_life_3d.comp
src/: ComputeShaderDebugger.cpp  GameOfLife3D.cpp  VmaImplementation.cpp  VulkanContext.cpp  VulkanMemoryManager.cpp  main.cpp
test_outputs/: test_results.json  workflow_report_20251125_214629.json
tests/: CMakeLists.txt  ComputeShaderTest.cpp  VMAIntegrationTest.cpp  __init__.py  test_analysis_result_structure.py  test_api_key_loading.py  test_api_key_validation.py  test_button_detection.py  test_claude_api.py  test_claude_error_handling.py  test_claude_vision_api.py  test_decorator_improvements.py  test_detection_accuracy.py  test_detection_performance.py  test_detection_resolutions.py  test_main.cpp  test_menu_detection.py  test_ocr_basic.py  test_ocr_confidence.py  test_ocr_error_handling.py  test_ocr_multilang.py  test_ocr_preprocessing.py  test_opencv_image_loading.py  test_opencv_installation.py  test_tesseract_installation.py  test_text_region_detection.py  v0.1.0_test_suite.py
tests/integration/: test_agent_system.py  test_analysis_results_saving.py  test_browser_workflow.py  test_calculator_workflow.py  test_cpp_game_integration.py  test_framework.py  test_full_workflow.py  test_notepad_workflow.py  test_playwright_adapter.py  test_screenshot_metadata.py  test_sprint2_progress.py
tests/unit/: __init__.py  test_content_validation.py  test_core.py  test_dark_theme.py  test_improvements.py  test_metrics.py  test_port_manager.py  test_screenshot_capture.py  test_utils.py  test_visual_analysis.py
ui/: dark_theme.py
ux_analysis_results/: ux_analysis_1748893185.json  ux_analysis_1748893266.json  ux_analysis_1748894568.json  ux_analysis_1748894603.json  ux_report_1748893185.html  ux_report_1748893266.html  ux_report_1748894568.html  ux_report_1748894603.html
ux_captures/: 20250604_131644_191_before.json  20250604_131648_643_after.json  20250604_132331_469_before.json  20250604_132337_148_after.json  analysis_20250604_131653.json  analysis_20250604_131710.json  analysis_20250604_132345.json
ux_mirror_autonomous/: demo_phase2.py  run_tests.py
(+98 files in other folders)
